<resources>
    <string name="app_name">AdminPanel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add">Add Post</string>
    <string name="title_donate">Donations</string>
    <string name="title_emergency">Emergency</string>
    <string name="title_request">Requests</string>
    <string name="title_projects">Projects</string>
    <string name="description">Description</string>
    <string name="title_details">Details</string>
</resources>